--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,54 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    package="com.balhae.historyapp">
 
     <application
-        android:name=".HistoryApplication"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
-        android:label="문화재 탐험"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Historyapp"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="31">
-        <activity
-            android:name=".ui.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.SplashActivity"
-            android:exported="false" /> <!-- Kakao SDK -->
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="YOUR_KAKAO_APP_KEY" /> <!-- Splash Activity -->
-        <activity
-            android:name=".ui.splash.SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Historyapp.Splash">
+        android:theme="@style/Theme.Historyapp">
+
+        <!-- 앱 시작점 -->
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Login Activity -->
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:theme="@style/Theme.HeritageApp" /> <!-- Main Activity -->
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.HeritageApp" />
+        </activity>
+
+        <activity android:name=".ui.SplashActivity" />
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.HomeActivity" />
+        <activity android:name=".ui.ProfileActivity" />
     </application>
 
 </manifest>
