--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <!-- 인터넷 권한 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 알림 권한 (Android 13+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".HistoryApp"
@@ -27,6 +29,7 @@
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.HomeActivity" />
         <activity android:name=".ui.ProfileActivity" />
+        <activity android:name=".ui.MyPageActivity" />
     </application>
 
 </manifest>
